--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 @import "./style/components/flexBubbleContainer";
 @import "./style/components/socialButtons";
 @import "./style/components/loader";
+@import "./style/components/legalInfos";
 @import "./style/pages/sections/sectionTitle";
 @import "./style/pages/sections/sectionIntro";
 @import "./style/pages/sections/sectionSkills";
