--- a/src/style/layout/_gridManager.scss
+++ b/src/style/layout/_gridManager.scss
@@ -740,7 +740,7 @@
       border-radius: 0 0 1rem 1rem;
     }
     &__card--cardC {
-      max-width: 70vw;
+      //max-width: 70vw;
       min-height: 80vh;
     }
     &__card--cardA {
