--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -1,5 +1,5 @@
 .aboutConfig {
-  padding: 80px 4vw 50px 4vw;
+  padding: 80px 4vw 0 4vw;
   &--single {
     height: auto;
     max-height: 130vh;
@@ -9,7 +9,7 @@
 //* for tablet :
 @media (min-width: 600px) {
   .aboutConfig {
-    padding: 60px 8vw 50px 8vw;
+    padding: 60px 8vw 0 8vw;
     &--single {
       height: auto;
       max-height: 180vh;
@@ -20,7 +20,7 @@
 //* for tablet :
 @media (min-width: 1100px) {
   .aboutConfig {
-    padding: 50px 10vw 50px 10vw;
+    padding: 50px 10vw 0 10vw;
   }
 }
 
