--- a/src/style/pages/sections/__sectionContact.scss
+++ b/src/style/pages/sections/__sectionContact.scss
@@ -1,5 +1,6 @@
 .sectContact {
   width: 100%;
+  min-height: 50vh;
 
   &__container {
     width: 100%;
@@ -8,7 +9,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     gap: 2vw;
     margin: 2rem 0;
   }
@@ -16,13 +17,16 @@
 
 .titleAndSubTitle {
   width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  //margin-bottom: 2rem;
 
   & h2 {
-    padding: 1rem 0;
+    height: auto;
+    padding: 0 0 1rem 0;
   }
   & p {
     padding-bottom: 1rem;
@@ -30,8 +34,9 @@
 }
 
 .contactBlocks {
-  min-width: 300px;
-  height: 100%;
+  width: 30vw;
+  max-width: 250px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -40,20 +45,20 @@
   padding: 2rem 1rem;
 
   & h3 {
-    padding: 2rem 0 0 0;
+    //padding: 2rem 0 0 0;
   }
   & p {
-    padding: 1rem;
+    //padding: 1rem;
   }
 }
 
 // dark/light Mode :
 #light .contactBlocks {
-  background: $color_header_bg_1_light;
+  //background: $color_header_bg_1_light;
   color: $textColor_light;
 }
 #dark .contactBlocks {
-  background: $color_header_bg_2_dark;
+  //background: $color_header_bg_2_dark;
   color: $textColor_dark;
 }
 //Color Theme :
@@ -101,4 +106,29 @@
 #red .colorIcon {
   fill: $colorTheme_red;
   stroke: $colorTheme_red;
+}
+
+@media (max-width: 800px) {
+  .sectContact__container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10vw;
+    margin-bottom: 2rem;
+  }
+  .contactBlocks {
+    width: 100vw;
+    padding: 0rem;
+
+    & h3 {
+      padding: 0;
+    }
+    & p {
+      padding: 0;
+    }
+
+    &:nth-child(2) {
+      display: none;
+    }
+  }
 }
