--- a/src/style/pages/sections/_sectionAccordion.scss
+++ b/src/style/pages/sections/_sectionAccordion.scss
@@ -46,8 +46,8 @@
     position: relative;
     isolation: isolate;
     //max-height: 500px;
-    height: auto;
-    max-height: 60vh;
+    min-height: max-content;
+    max-height: 50vh;
     flex-basis: calc((var(--_panel-padding) * 2) + var(--_button-size));
     overflow: hidden;
     padding: var(--_panel-padding);
@@ -68,9 +68,8 @@
       z-index: 33;
       filter: blur(50px);
     }
-
     &:has([ariaExpanded="true"]) {
-      flex-basis: clamp(15rem, 50vw, 25rem);
+      flex-basis: clamp(15rem, 90vw, 40rem);
       flex-grow: 1;
 
       & p {
@@ -115,14 +114,15 @@
     }
 
     &--content {
-      width: 95%;
+      // width: 95%;
       height: 100%;
-      margin-top: 0rem;
-      padding: 1rem 0rem;
+      //margin-top: 0rem;
+      padding: 1rem 1rem 1rem 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      text-indent: 1rem;
     }
 
     &--content p {
@@ -245,23 +245,23 @@
   //! réglages des effets sur les cartes de l'accordéon
   & #blue .accordion__panel::after {
     transform: scaleY(1.5);
-    background: $colorTheme_blue-light;
+    //background: $colorTheme_blue-light;
   }
   & #yellow .accordion__panel::after {
     transform: scaleY(1.5);
-    background: $colorTheme_yellow-light;
+    //background: $colorTheme_yellow-light;
   }
   & #red .accordion__panel::after {
     transform: scaleY(1.5);
-    background: $colorTheme_red-light;
+    //background: $colorTheme_red-light;
   }
   & #purple .accordion__panel::after {
     transform: scaleY(1.5);
-    background: $colorTheme_purple-light;
+    //background: $colorTheme_purple-light;
   }
   & #green .accordion__panel::after {
     transform: scaleY(1.5);
-    background: $colorTheme_green-light;
+    //background: $colorTheme_green-light;
   }
 }
 
@@ -333,23 +333,23 @@
 //! réglages des effets sur les cartes de l'accordéon
 #blue .accordion__panel::after {
   transform: scaleY(1.5);
-  background: $colorTheme_blue;
+  //background: $colorTheme_blue;
 }
 #yellow .accordion__panel::after {
   transform: scaleY(1.5);
-  background: $colorTheme_yellow;
+  //background: $colorTheme_yellow;
 }
 #red .accordion__panel::after {
   transform: scaleY(1.5);
-  background: $colorTheme_red;
+  //background: $colorTheme_red;
 }
 #purple .accordion__panel::after {
   transform: scaleY(1.5);
-  background: $colorTheme_purple;
+  //background: $colorTheme_purple;
 }
 #green .accordion__panel::after {
   transform: scaleY(1.5);
-  background: $colorTheme_green;
+  //background: $colorTheme_green;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -365,6 +365,9 @@
 }
 
 @media (min-width: 600px) {
+  .accordion__panel:has([ariaExpanded="true"]) {
+    flex-basis: clamp(15rem, 50vw, 25rem);
+  }
   .accordion__panel--content {
     align-items: flex-end;
     justify-content: space-evenly;
@@ -373,6 +376,9 @@
     & button {
       margin: 2rem 1rem;
     }
+  }
+  .accordion__panel {
+    max-height: 60vh;
   }
   .accordion {
     --_button-size: calc(2.3rem + 1vw);
