--- a/src/style/pages/sections/_sectionIntro.scss
+++ b/src/style/pages/sections/_sectionIntro.scss
@@ -1,7 +1,7 @@
 .sectionIntro {
   width: 100%;
   height: 100%;
-  min-height: 70vh;
+  min-height: 50vh;
   padding: 1.5rem 1rem;
   // margin-bottom: 2rem;
 
@@ -41,7 +41,7 @@
 
 .arrowMargin {
   position: relative;
-  margin: 4rem 0 4rem 0;
+  margin: 8rem 0 2rem 0;
 }
 
 .arrow {
@@ -756,6 +756,13 @@
   }
   .arrowMargin {
     margin: 1rem 0;
+  }
+}
+
+//*for big screen
+@media (min-width: 1580px) {
+  .sectionIntro {
+    padding: 5vh 12vw;
   }
 }
 
