--- a/src/style/pages/sections/_sectionTitle.scss
+++ b/src/style/pages/sections/_sectionTitle.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: flex-start;
   margin-top: -1rem;
-  margin-bottom: 4rem;
+  margin-bottom: 10vh;
 
   &__container {
     position: relative;
