--- a/src/style/pages/sections/_sectionIntro.scss
+++ b/src/style/pages/sections/_sectionIntro.scss
@@ -43,6 +43,11 @@
   position: relative;
   margin: 8rem 0 2rem 0;
 }
+@media (max-width: 400px) {
+  .arrowMargin {
+    margin: 4rem 0 2rem 0;
+  }
+}
 
 .arrow {
   --_arrowSize: 40px;
