--- a/src/style/settings/_fonts.scss
+++ b/src/style/settings/_fonts.scss
@@ -48,8 +48,9 @@
   &__basicText {
     font-size: clamp(1rem, 11px + 0.3vw, 2rem);
     font-weight: 300;
-    letter-spacing: 0.3px;
-    line-height: calc(1.4rem + 0.8vw);
+    letter-spacing: 0.5px;
+    line-height: calc(1.2rem + 0.6vw);
+    text-align: justify;
   }
   &__label {
     font-size: clamp(0.9rem, 11px + 0.3vw, 2rem);
@@ -69,7 +70,7 @@
     line-height: calc(1rem + 0.8vw);
   }
   &__introTitle {
-    font-size: clamp(2rem, 1.5rem + 1.5vw, 2.5rem);
+    font-size: clamp(1.6rem, 1.3rem + 1vw, 2.3rem);
     font-weight: 700;
     letter-spacing: 1.5px;
     line-height: 2.5rem;
