--- a/src/style/components/_contactForm.scss
+++ b/src/style/components/_contactForm.scss
@@ -8,13 +8,9 @@
   --_bgColor: #353333;
 }
 
-.sectForm {
-  //margin: 2rem 0;
-}
-
 .contactForm {
   width: 100%;
-  //max-width: 1100px;
+
   height: auto;
   display: flex;
   flex-direction: column;
@@ -28,7 +24,6 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    //margin: 2rem 0;
   }
 }
 .contactBlock {
@@ -49,24 +44,23 @@
   }
 }
 
-//TO Change with Tilde =
 .inputBox {
   position: relative;
-  width: 100%; //! To change.
+  width: 100%;
   padding: 3rem 0 0 0;
 
   &__input {
     width: 100%;
     height: 40px;
-    // background: transparent;
+
     background: var(--_bgColor);
     color: var(--_textColor);
-    //border: 1px solid red;
+
     border: none;
     border-radius: 20px;
     outline: none;
     box-shadow: none;
-    //! To change.
+
     font-size: 1em;
     font-weight: 700;
 
@@ -95,12 +89,6 @@
       bottom: initial;
       top: 3.4rem;
     }
-    // &:hover {
-    //   color: aqua;
-    //   transform: translateY(-2rem);
-    //   transition: 0.3s transform ease-out;
-    //   font-size: 0.65em;
-    // }
   }
 
   &__alert {
@@ -122,10 +110,8 @@
     }
   }
 
-  //TO Change with Tilde = control same level
   &__input:valid ~ .inputBox__text,
   &__input:focus ~ .inputBox__text {
-    //color: rgb(232, 25, 25);
     transform: translateY(-2.1rem);
     transition: 0.3s transform ease-out;
     font-size: 0.8em;
@@ -134,7 +120,7 @@
 
   &__input:focus ~ .inputBox__alert {
     color: var(--_standardColor);
-    //* put in black in Light mode.
+
     opacity: 1;
     transform: translateY(2.4rem);
     transition: 0.3s all ease-out;
@@ -142,7 +128,6 @@
 
     &--valid {
       color: var(--_validColor);
-      //* put in black in Light mode.
     }
     &--textarea {
       transform: translateY(-9.5rem);
@@ -174,7 +159,6 @@
   height: 4px;
   background: var(--_standardColor);
   transition: 0.3s all ease-out;
-  //padding: 0 1rem;
 
   &--valid {
     background: var(--_validColor);
@@ -191,7 +175,6 @@
 }
 
 @media (max-width: 400px) {
-  //in media:
   .inputBox__input--textarea {
     margin-top: 3rem;
   }
@@ -221,7 +204,6 @@
 @media (min-width: 1580px) {
   .article__sub {
     padding: 5vh 15vw;
-    //border: 1px solid red;
   }
 }
 
@@ -239,6 +221,3 @@
     --_standardColor: #7f8080;
   }
 }
-
-// #dark {
-// }
