--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -43,7 +43,6 @@
   &__btn {
     position: relative;
     border-radius: 50%;
-    //margin-bottom: 2rem;
 
     cursor: pointer;
     &--small {
@@ -139,7 +138,6 @@
     right: 0;
     width: 100%;
     height: 8rem;
-    //transform: translateY(2.4rem);
     z-index: 1;
   }
 }
@@ -203,7 +201,6 @@
       box-shadow: inset 2px 2px 2px #e0dae4, inset 2px 2px 0px #f3eeee;
     }
     &__icon path {
-      //fill: white;
       fill: $textColor_light;
     }
 
@@ -222,7 +219,6 @@
     &__navigation__list--lign:hover > p,
     &__navigation__list--centerLign:hover > p,
     &__navigation__list--reverseLign:hover > p {
-      //color: red;
       color: rgba($textColor_dark, 0.8);
     }
 
@@ -275,7 +271,6 @@
     &__navigation__list--lign:hover > p,
     &__navigation__list--centerLign:hover > p,
     &__navigation__list--reverseLign:hover > p {
-      //color: red;
       color: rgba($textColor_dark, 0.8);
     }
 
@@ -334,7 +329,7 @@
   }
 }
 
-//! darkMode :
+// darkMode :
 #green {
   & .activePage p {
     color: $colorTheme_green !important;
@@ -395,8 +390,6 @@
   }
 }
 
-//for darkTheme colors menuText::after
-
 #green .menuText {
   &::after {
     background: $colorTheme_green;
@@ -423,7 +416,6 @@
   }
 }
 
-//for lightTheme Colors menuText::after
 #light {
   & #green .menuText {
     &::after {
@@ -534,7 +526,7 @@
   height: auto;
   position: relative;
   transform: rotateZ(0deg);
-  //fill: $textColor_dark;
+
   scale: 0.9;
   transition: all 0.5s 0.2s ease-in-out;
 
@@ -668,9 +660,6 @@
 @media (max-width: 800px) {
   .jawaLogo {
     max-width: 80px;
-  }
-  .jawaLogo__text {
-    //transform: translateY(0px);
   }
 }
 
